# kreuzungen

./: .env  .gitignore  README.md  TODO.md  moreRoutes.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-auth-service.yml  deploy-static-site.yml  deploy-webhook-service.yml  fly.yml  static.yml
analytics/: fly.toml
analytics/elefant/: fly.toml
app/: fly.toml  package-lock.json  package.json  webpack.config.js
app/src/: app.ts  durf.ts  faq.md  geo.test.ts  geo.ts  globe.html  index.html  initialize.ts  main.ts  overpass.ts  routes.json  stash.ts  strava.ts  ui.ts
auth/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
auth/src/: auth.py  config.py
hydro/: index.html
hydro/factory/: dbt_project.yml
hydro/factory/models/: country.sql  nominatim_relations.py  osm_relations.sql  owner.sql  relations.sql  schema.yml  staging.sql  synthetic_relations.sql
site/: Dockerfile  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
site/css/: style.css
site/js/: strava_api.js
site/src/: Untitled-3.json  app.ts  durf.ts  fails.json  faq.md  geo.test.ts  geo.ts  index.html  initialize.ts  main.ts  overpass.ts  stash.ts  strava.ts  strava_api.js  ui.ts  works.json
src/: auth.py  config.py
umani/: fly.toml
webhook/: app.js  app.ts  fly.toml  geo.js  geo.ts  index.ts  overpass.js  package.json  strava.js  strava.ts
